--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Julia - I'm User Interface Designer & Developer.</title>
-  <meta name="title" content="Julia - I'm User Interface Designer & Developer.">
-  <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
+  <title>Amogh - Fullstack Dev.</title>
+  <meta name="title" content="Amogh - Fullstack Dev.">
+  <meta name="description" content="This is a personal portfolio">
 
   <!-- 
     - favicon
@@ -48,7 +48,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo-dark.svg" width="64" height="24" alt="Julia home">
+        <img src="./assets/images/amogh1.png" width="120" height="45" alt="Julia home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -88,9 +88,9 @@
         </ul>
 
         <div class="wrapper">
-          <a href="mailto:info@email.com" class="contact-link">info@email.com</a>
+          <a href="amoghmohta27@gamil.com" class="contact-link">amoghmohta27@gamil.com</a>
 
-          <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
+          <a href="tel:+91 6291353366" class="contact-link">+91 6291353366</a>
         </div>
 
         <ul class="social-list">
@@ -153,21 +153,21 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/hero-banner.jpg" width="560" height="540" alt="Julia" class="w-100"
+            <img src="./assets/images/id1c.jpg" width="560" height="540" alt="Amogh" class="w-100"
               data-reveal="top">
 
-            <img src="./assets/images/hero-shape.svg" width="203" height="91" alt="250+ Projects Done" class="shape"
+            <img src="./assets/images/hero-shape.png" width="203" height="91" alt="20+ Projects Done" class="shape"
               data-reveal="top" data-reveal-delay="0.25s">
           </figure>
 
           <div class="hero-content">
 
             <h1 class="h1 hero-title" data-reveal="top" data-reveal-delay="0.5s">
-              I'm User Interface Designer & Developer.
+              I'm a Fullstack Web Developer.
             </h1>
 
             <p class="section-text" data-reveal="top" data-reveal-delay="0.75s">
-              Hello! I'm Julia, a freelance user interface designer & developer based in London. I’m very passionate
+              Hello! I'm Amogh, a freelance web developer based in Kolkata. I’m very passionate
               about the work that I do.
             </p>
 
@@ -199,9 +199,7 @@
               <h2 class="h2 section-title">What I Do?</h2>
 
               <p class="section-text">
-                Duis mollis est commodo luctus nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis
-                risus eget urna mollis ornare vel. Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus
-                magna, vel scelerisque nisl.
+                As a web developer, I design and build websites that represent my clients' brands online. I ensure that the website is user-friendly, optimized for search engines, and secure. I provide ongoing maintenance and support to meet my clients' needs over time.
               </p>
             </div>
 
@@ -279,8 +277,7 @@
                 <h3 class="h4 card-title">Web Design</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  Web design involves creating visually appealing and functional websites that effectively communicate a brand's message and engage its audience.
                 </p>
 
               </div>
@@ -296,8 +293,7 @@
                 <h3 class="h4 card-title">Mobile Design</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  Mobile design focuses on creating websites and user interfaces that are optimized for mobile devices, ensuring a seamless user experience across all devices.
                 </p>
 
               </div>
@@ -314,8 +310,7 @@
                 <h3 class="h4 card-title">Development</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  Development involves the technical process of building and coding a website, including back-end functionality, user interface design, and database integration.
                 </p>
 
               </div>
@@ -331,8 +326,7 @@
                 <h3 class="h4 card-title">SEO</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  SEO, or search engine optimization, involves optimizing a website's content and structure to improve its ranking and visibility in search engine results pages.
                 </p>
 
               </div>
@@ -380,8 +374,7 @@
                   <h3 class="h3 card-title">Snowlake Theme</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper. Fusce dapibus tellus cursus.
+                    I designed a website for a small business that included a modern and clean design, intuitive navigation, and search engine optimization. The site was responsive and optimized for mobile devices.
                   </p>
 
                   <a href="#" class="btn-text" style="color: #a07cc5">
@@ -410,8 +403,7 @@
                   <h3 class="h3 card-title">Budget App</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper. Fusce dapibus tellus cursus.
+                    I created a mobile app design for a startup that featured a simple and intuitive user interface, fast loading times, and integration with social media platforms. The app was designed for iOS and Android.
                   </p>
 
                   <a href="#" class="btn-text" style="color: #3f78e0">
@@ -440,8 +432,7 @@
                   <h3 class="h3 card-title">Missio Theme</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere porta consectetur cursus porta lobortis. Scelerisque
-                    id ligula felis.
+                    I designed a website for a small business that included a modern and clean design, intuitive navigation, and search engine optimization. The site was responsive and optimized for mobile devices.
                   </p>
 
                   <a href="#" class="btn-text" style="color: #7cb798">
@@ -470,8 +461,7 @@
                   <h3 class="h3 card-title">Storage App</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper.
+                    I created a mobile app design for a startup that featured a simple and intuitive user interface, fast loading times, and integration with social media platforms. The app was designed for iOS and Android.
                   </p>
 
                   <a href="#" class="btn-text" style="color: #d16b86">
@@ -557,7 +547,7 @@
     <div class="container">
 
       <p class="copyright">
-        © 2022 codewithsadee. All rights reserved.
+        © 2023 amoghmohta27@gmail.com. All rights reserved.
       </p>
 
       <ul class="social-list">
